codex-rs/trace-tui/src/snapshots/codex_trace_tui__tests__medium_browser.snap
---
source: trace-tui/src/render_tests.rs
expression: "render_app(&mut picker, 96, 26)"
---
 Codex Trace  read-only · offline │ thread 019d0000-0000-7000-8000-000000000101 / collapsed

┌ Records ─────────────────────────────────────────────────────────────────────────────────────┐
│  NAME               KIND CLASS        STATUS    TIME                 SOURCE   EVIDENCE       │
│▶ event              user user         —         —                    persist… semantic       │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
 1/2 visible · 1 hidden · 0 columns omitted · Collapsed  jk move  Enter descend  i detail  s jso
