codex-rs/trace-tui/src/snapshots/codex_trace_tui__tests__narrow_browser.snap
---
source: trace-tui/src/render_tests.rs
expression: "render_app(&mut picker, 66, 24)"
---
 Codex Trace  read-only · offline │ thread 019d0000-0000-7000-8000

┌ Records ───────────────────────────────────────────────────────┐
│▶ event               user user         persist… semantic       │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
│                                                                │
└────────────────────────────────────────────────────────────────┘
 1/2 visible · 1 hidden · 2 columns omitted · Collapsed  jk move
