codex-rs/trace-tui/src/snapshots/codex_trace_tui__tests__normalized_raw_record_detail.snap
---
source: trace-tui/src/render_tests.rs
expression: "render_app(&mut app, 100, 24)"
---
 Codex Trace  read-only · offline │ thread 019d0000-0000-7000-8000-000000000101 / structural / event
kind: rollout record
class: user
status: —
timestamp: 2026-07-25T00:00:01Z
source: ordinary
evidence: semantic
id: ordinary:019d0000-0000-7000-8000-000000000101:2

semantic normalized JSON — not an exact source artifact

{
  "payload": {
    "kind": "plain",
    "message": "first line\nsecond line with **markdown**",
    "type": "user_message"
  },
  "timestamp": "2026-07-25T00:00:01Z",
  "type": "event_msg"
}



jk scroll  h/l horizontal  v view  Esc back  q quit                structural · raw · nowrap · x 0/0
