codex-rs/trace-tui/src/snapshots/codex_trace_tui__tests__picker_filter.snap
---
source: trace-tui/src/render_tests.rs
expression: "render_app(&mut picker, 100, 18)"
---
 Codex Trace  read-only · offline │ root sessions

┌ Root sessions ───────────────────────────────────────────────────────────────────────────────────┐
│  1 catalog diagnostic(s)                                                                         │
│    ! [unavailable] cannot read rollout metadata: rollout at /synthetic/sessions/2026/07/25/rollou│
│  / synthetic                                                                                     │
│▶ 2026-07-25T00:00:00Z     ordinary unknown     2 threads  synthetic          /synthetic/workspace│
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 type to filter  ↑↓ select  Enter open  Esc close search
