codex-rs/trace-tui/src/snapshots/codex_trace_tui__tests__raw_payload_collapsed.snap
---
source: trace-tui/src/render_tests.rs
expression: "render_app(&mut app, 100, 24)"
---
 Codex Trace  read-only · offline │ session rollout-ui / structural

┌ Records ─────────────────────────────────────────────────────────────────────────────────────────┐
│  NAME                   KIND CLASS        STATUS    TIME                 SOURCE   EVIDENCE       │
│  thread /root           THR  structure    running   2026-07-28T00:00:00Z rich     semantic       │
│▶ payload SessionMetada… RAW  raw          —         —                    rich     exact          │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 2/2 visible · 0 hidden · 0 columns omitted · Structural  jk move  Enter descend  i detail  s json
