codex-rs/trace-tui/src/snapshots/codex_trace_tui__tests__raw_payload_failure_sanitized.snap
---
source: trace-tui/src/render_tests.rs
expression: rendered
---
 Codex Trace  read-only · offline │ session / structural / payload SessionMetadata
kind: raw payload
class: raw
status: —
timestamp: —
source: rich
evidence: exact
id: raw_payload:1
raw: bad �[31m payload� path

semantic normalized JSON — not an exact source artifact

{
  "kind": {
    "type": "session_metadata"
  },
  "path": "payloads/1.json",
  "raw_payload_id": "raw_payload:1"
}




jk scroll  h/l horizontal  v view  Esc back  q quit                structural · raw · nowrap · x 0/0
