codex-rs/trace-tui/src/snapshots/codex_trace_tui__tests__record_filter_overlay.snap
---
source: trace-tui/src/render_tests.rs
expression: "render_app(&mut app, 100, 28)"
---
 Codex Trace  read-only · offline │ session 019d0000-0000-7000-8000-000000000101 / thread 019d0000-0

┌ Records ─────────────────────────────────────────────────────────────────────────────────────────┐
│  NAME                   KIND CLASS        STATUS    TIME                 SOURCE   EVIDENCE       │
│  session metadata       REC  structure    —         2026-07-25T00:00:00Z ordinary semantic       │
│▶ event                ┌ Filter · Space toggle · Enter apply ─────────────┐rdinary semantic       │
│                       │▶ [x] structure                                   │                       │
│                       │  [x] system                                      │                       │
│                       │  [x] developer                                   │                       │
│                       │  [x] user                                        │                       │
│                       │  [x] assistant                                   │                       │
│                       │  [x] commentary                                  │                       │
│                       │  [x] final                                       │                       │
│                       │  [x] reasoning                                   │                       │
│                       │  [x] tool input                                  │                       │
│                       │  [x] tool output                                 │                       │
│                       │  [x] code                                        │                       │
│                       │  [x] delegation                                  │                       │
│                       │  [x] compaction                                  │                       │
│                       │  [x] diagnostic                                  │                       │
│                       │  [x] raw                                         │                       │
│                       │  [x] other                                       │                       │
│                       └──────────────────────────────────────────────────┘                       │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 Space toggle  ↑↓ choose  Enter/Esc close  r reset  q quit
