codex-rs/trace-tui/src/snapshots/codex_trace_tui__tests__record_level_with_preview.snap
---
source: trace-tui/src/render_tests.rs
expression: "render_app(&mut app, 150, 24)"
---
 Codex Trace  read-only · offline │ session 019d0000-0000-7000-8000-000000000101 / thread 019d0000-0000-7000-8000-000000000101

┌ Records ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  NAME                   KIND CLASS        STATUS    TIME                 SOURCE   EVIDENCE      PREVIEW                                            │
│▶ session metadata       REC  structure    —         2026-07-25T00:00:00Z ordinary semantic      cli                                                │
│  event                  REC  user         —         2026-07-25T00:00:01Z ordinary semantic      first line second line with **markdown**           │
│                                                                                                                                                    │
│                                                                                                                                                    │
│                                                                                                                                                    │
│                                                                                                                                                    │
│                                                                                                                                                    │
│                                                                                                                                                    │
│                                                                                                                                                    │
│                                                                                                                                                    │
│                                                                                                                                                    │
│                                                                                                                                                    │
│                                                                                                                                                    │
│                                                                                                                                                    │
│                                                                                                                                                    │
│                                                                                                                                                    │
│                                                                                                                                                    │
│                                                                                                                                                    │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 2/2 visible · 0 hidden · 0 columns omitted  jk move  Enter descend  i detail  Esc parent  / search  f filter  ? help  q quit
