codex-rs/trace-tui/src/snapshots/codex_trace_tui__tests__root_picker.snap
---
source: trace-tui/src/render_tests.rs
expression: "render_app(&picker, 120, 22)"
---
 Codex Trace  read-only · offline │ root sessions

┌ Root sessions ───────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  1 catalog diagnostic(s)                                                                                             │
│    ! [unavailable] cannot read rollout metadata: rollout at /synthetic/sessions/2026/07/25/rollout-malformed.jsonl is│
│▶ 2026-07-25T00:00:00Z     ordinary unknown     2 threads  synthetic  /synthetic/workspace                            │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ↑↓/jk select  / filter  Enter open  q quit
