codex-rs/trace-tui/src/snapshots/codex_trace_tui__tests__search_overlay.snap
---
source: trace-tui/src/render_tests.rs
expression: "render_app(&app, 100, 25)"
---
 Codex Trace  read-only · offline │ session 019d0000-0000-7000-8000-000000000101

┌ ● Thread tree ───────────────────────────┐┌   Inspector ─────────────────────────────────────────┐
│▶ ▾ SES  session 019d0000-0000-7000-8000-0││Session — session 019d0000-0000-7000-8000-000000000101│
│    ▸ THR  thread 019d0000-0000-7000-8000-││id: 019d0000-0000-7000-8000-000000000101              │
│          ┌ Search this tree ──────────────────────────────────────────────────────────┐          │
│          │/needle                                                                     │          │
│          └────────────────────────────────────────────────────────────────────────────┘          │
│          ┌ Results ───────────────────────────────────────────────────────────────────┐          │
│          │Press Enter to search                                                       │          │
│          │                                                                            │          │
│          │                                                                            │          │
│          │                                                                            │          │
│          │                                                                            │          │
│          │                                                                            │          │
│          │                                                                            │          │
│          │                                                                            │          │
│          │                                                                            │          │
│          │                                                                            │          │
│          └────────────────────────────────────────────────────────────────────────────┘          │
│                                          ││    "exact_inference_context": false,                 │
│                                          ││    "ordinary_transcript": true,                      │
│                                          ││    "per_generation_usage": false,                    │
└──────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
 tree  Tab pane  jk move  h/Backspace parent  Enter open/raw  / search  n/N hits  d diagnostics  q q
